--- a/style.css
+++ b/style.css
@@ -1,5 +1,151 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,900;1,5..1200,900&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+.container {
+  background-color: rgb(233, 223, 213);
+  min-height: 100vh;
+  height: 100%;
+  padding: 20px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+}
+
+.logo > button {
+  padding: 10px 15px;
+  border-radius: 15px;
+  border: none;
+  /* margin-left: 15px; */
+  background: linear-gradient(
+    to bottom right,
+    rgb(249, 191, 77),
+    rgb(245, 142, 101)
+  );
+  color: white;
+  font-weight: 700;
+}
+
+.main {
+  margin: 30px;
+}
+
+.hero-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero-img > img {
+  width: 300px;
+}
+.hero-img .absolute {
+  position: absolute;
+}
+.hero-img .hero {
+  z-index: 2;
+}
+.hero-img > .purple {
+  transform: rotate(-20deg);
+}
+
+.hero-img > .pink {
+  transform: rotate(-40deg);
+}
+.hero-img > .blue {
+  transform: rotate(-60deg);
+}
+
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero-text > h1 {
+  font-size: 3rem;
+  margin: 1rem;
+  /* padding: 1rem; */
+  font-family: "Playfair", serif;
+  font-optical-sizing: auto;
+  font-weight: 900;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
+
+.hero-text > p {
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  /* padding: 0.8rem; */
+  margin: 0.8rem;
+}
+
+.hero-text > form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: 100%;
+  margin: 1rem;
+}
+
+.hero-text > form input#email,
+.hero-text > form input#submit-btn {
+  padding: 0.8rem 0.9rem;
+  border: none;
+  border-radius: 0.2rem;
+  font-size: 0.9rem;
+  width: 90%;
+}
+
+.hero-text > form input#submit-btn {
+  background-color: rgb(24, 119, 242);
+  color: #fff;
+}
+
+.hero-text > span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer > .social-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+  /* gap: 2rem; */
+}
+.footer > .social-icon img {
+  width: 50px;
+}
+
+.footer > .social-icon img:nth-child(2) {
+  width: 85px;
+}
+
+.footer .expert-doubt {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+  padding: 0 1rem;
 }
