--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
   justify-content: space-between;
   align-items: center;
 }
+
 .header-nav,
 .header-btn {
   display: none;
@@ -60,9 +61,10 @@
 }
 .hero-img .absolute {
   position: absolute;
+  z-index: 0;
 }
 .hero-img .hero {
-  z-index: 2;
+  z-index: 1;
 }
 .hero-img > .purple {
   transform: rotate(-20deg);
@@ -201,7 +203,37 @@
     gap: 1rem;
   }
 }
-
+@media (max-width: 1023px) {
+  .header-nav {
+    display: block;
+  }
+  .header-nav ul {
+    background-color: rgb(233, 223, 213);
+    display: block;
+    position: absolute;
+    top: 80px;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    width: 100%;
+    height: 100vh;
+    gap: 20px;
+    z-index: 3;
+    transform: translate(-100%, 0);
+    transition: transform 0.58s ease-in;
+  }
+  .header-nav ul.show {
+    transform: translate(0%, 0);
+  }
+  .header-nav ul a {
+    text-decoration: none;
+    font-size: 1rem;
+    color: #000;
+  }
+}
 @media (min-width: 1024px) {
   .header,
   .footer {
@@ -211,6 +243,7 @@
     display: flex;
     align-items: center;
     list-style: none;
+    flex-direction: row;
   }
   .header-nav ul li {
     margin-left: 1rem;
