--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@
     align-items: center;
     justify-content: center;
     list-style: none;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     gap: 20px;
     z-index: -1;
