image image size decreased for max screen 400px

--- a/style.css
+++ b/style.css
@@ -157,6 +157,11 @@
   gap: 1rem;
   padding: 0 1rem;
 }
+@media (max-width: 400px) {
+  .hero-img > img {
+    width: 180px;
+  }
+}
 
 @media (min-width: 768px) {
   /* body {
