--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-style: normal;
+  overflow-x: hidden;
 }
 .height {
   max-height: 100vh;
